# CPLUS-UI-ChatCPPTest

./: .gitignore  CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  Database.cpp  Database.h  Message.cpp  Message.h  Parsing.cpp  Parsing.h  README.md  Test.cpp  User.cpp  User.h  main.cpp  sha1.cpp  sha1.h
sources/: CommandLineInterface.cpp  CommandLineInterface.h  Database.cpp  Database.h  Message.cpp  Message.h  Parsing.cpp  Parsing.h  Test.cpp  User.cpp  User.h  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  sha1.cpp  sha1.h  startscreen.cpp  startscreen.h  startscreen.ui
translations/: my_ru.qm  my_ru.ts
